# cryptoadapter

./: .gitignore  CMakeLists.txt  make.sh
doxygen/: CMakeLists.txt  doxygen.conf.in  header.html
pjson/: pjson.h
src/: version.h  version.h.in
src/exchange/example/: adapter_price.cpp  adapter_price.h  adapter_trade.cpp  adapter_trade.h  config.cpp  config.h  connector_rest_price.cpp  connector_rest_price.h  connector_ws_price.cpp  connector_ws_price.h  connector_ws_trade.cpp  connector_ws_trade.h  factory.cpp  factory.h
src/exchange/example/tests/: connector.cpp
src/fin/: commission_strategy.cpp  commission_strategy.h  cstringmap.h  exchange.cpp  exchange.h  exchange_dictionary.cpp  exchange_dictionary.h  exchange_factory.cpp  exchange_factory.h  exchange_factory_manager.cpp  exchange_factory_manager.h  instrument.cpp  instrument.h  instrument_registry.cpp  instrument_registry.h  market.cpp  market.h  mixed_orderbook.cpp  mixed_orderbook.h  numeric.cpp  numeric.h  order.cpp  order.h  orderbook.cpp  orderbook.h  profiling.cpp  profiling.h
src/platform/: http.cpp  http.h  log.cpp  log.h  perflogger.cpp  perflogger.h  sign_util.cpp  sign_util.h  task_queue.cpp  task_queue.h  timer.cpp  timer.h  websocket.cpp  websocket.h
tests/: CMakeLists.txt
